@@ -1,6 +1,7 @@
 TuxGuitar 1.0 changes:
 
--> Final Release:
+-> Release Candidate 4:
+* Bug Fixeds
 * File format converter plugin
 * Dutch translation
 * Russian translation
